--- a/app/src/main/res/layout/item_category_list.xml
+++ b/app/src/main/res/layout/item_category_list.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="60dp"
     android:orientation="horizontal"
     android:gravity="center_vertical"
-    android:background="@drawable/bg_category_item"
+    android:background="?attr/cardBackgroundColor"
     android:padding="12dp"
     android:layout_marginBottom="10dp">
 
@@ -12,14 +13,15 @@
         android:id="@+id/imgIcon"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:src="@drawable/ic_food" />
+        android:src="@drawable/ic_food"
+        app:tint="?attr/iconTint" />
 
     <TextView
         android:id="@+id/txtName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Thực phẩm"
-        android:textColor="#000000"
+        android:text="@string/expense"
+        android:textColor="?attr/textColorPrimary"
         android:textSize="16sp"
         android:layout_marginStart="14dp" />
 
