--- a/app/src/main/res/drawable/ic_theme.xml
+++ b/app/src/main/res/drawable/ic_theme.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-    <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M12,2A10,10 0 1,0 22,12A10,10 0 0,0 12,2M6,12A6,6 0 0,1 12,6V18A6,6 0 0,1 6,12Z"/>
+  <path
+      android:fillColor="@android:color/white"
+      android:pathData="M12,3c-4.97,0 -9,4.03 -9,9s4.03,9 9,9c0.83,0 1.64,-0.11 2.4,-0.31 -0.39,-0.44 -0.74,-0.93 -1.03,-1.46C12.5,19.52 11.75,20 11,20c-3.31,0 -6,-2.69 -6,-6s2.69,-6 6,-6c1.01,0 1.94,0.25 2.75,0.69C13.25,5.19 12.64,3 12,3zM12,2c-0.7,0 -1.37,0.1 -2,0.29C11.5,3.19 13,5.1 13,7.5c0,1.93 -1.16,3.57 -2.81,4.25C10.6,12.7 11.28,13 12,13c2.76,0 5,-2.24 5,-5S14.76,3 12,3L12,2z"/>
 </vector>
