--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,78 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:background="#6CA6F0"
-    android:padding="20dp">
+    android:background="?attr/backgroundColor">
 
-
-    <TextView
-        android:id="@+id/tvTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="36dp"
-        android:text="Log In"
-        android:textColor="@android:color/white"
-        android:textSize="36sp"
-        android:textStyle="bold" />
-
-    <EditText
-        android:id="@+id/etUsername"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="Username"
-        android:padding="12dp"
-        android:background="@drawable/edittext_bg"
-        android:drawableEnd="@drawable/ic_user"
-        android:drawablePadding="12dp"
-        android:textColor="#000000"
-        android:textColorHint="#888888"
-        android:layout_marginBottom="16dp" />
-
-    <EditText
-        android:id="@+id/etPassword"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:padding="12dp"
-        android:background="@drawable/edittext_bg"
-        android:drawableEnd="@drawable/ic_lock"
-        android:drawablePadding="12dp"
-        android:textColor="#000000"
-        android:textColorHint="#888888"
-        android:layout_marginBottom="8dp" />
-
-    <TextView
-        android:id="@+id/tvForgot"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Forgot Password ?"
-        android:textColor="#000000"
-        android:textSize="14sp"
-        android:layout_marginBottom="24dp"
-        android:layout_gravity="end" />
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:orientation="horizontal"
+        android:padding="16dp"
+        android:gravity="end">
 
-    <Button
-        android:id="@+id/btnLogin"
+        <ImageView
+            android:id="@+id/iv_language_setting"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:src="@drawable/ic_language"
+            android:layout_marginEnd="16dp"
+            app:tint="?attr/iconTint" />
+
+        <ImageView
+            android:id="@+id/iv_theme_setting"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:src="@drawable/ic_theme"
+            app:tint="?attr/iconTint" />
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Login"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:background="@drawable/login_button_bg"
-        android:textColor="@android:color/white"
-        android:layout_marginBottom="24dp" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:padding="20dp">
 
-    <TextView
-        android:id="@+id/tvSignup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Don’t have an account?"
-        android:textSize="14sp"
-        android:textColor="#000000"
-        android:layout_gravity="center" />
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="36dp"
+            android:text="@string/welcome_back"
+            android:textColor="?attr/textColorPrimary"
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
-</LinearLayout>
+        <EditText
+            android:id="@+id/etUsername"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:hint="@string/username_hint"
+            android:padding="12dp"
+            android:background="?attr/editTextBackground"
+            android:drawableEnd="@drawable/ic_user"
+            android:drawablePadding="12dp"
+            android:textColor="?attr/editTextColor"
+            android:textColorHint="?attr/editTextColorHint"
+            android:layout_marginBottom="16dp" />
+
+        <EditText
+            android:id="@+id/etPassword"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:hint="@string/password_hint"
+            android:inputType="textPassword"
+            android:padding="12dp"
+            android:background="?attr/editTextBackground"
+            android:drawableEnd="@drawable/ic_lock"
+            android:drawablePadding="12dp"
+            android:textColor="?attr/editTextColor"
+            android:textColorHint="?attr/editTextColorHint"
+            android:layout_marginBottom="8dp" />
+
+        <TextView
+            android:id="@+id/tvForgot"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/forgot_password"
+            android:textColor="?attr/textColorPrimary"
+            android:textSize="14sp"
+            android:layout_marginBottom="24dp"
+            android:layout_gravity="end" />
+
+        <Button
+            android:id="@+id/btnLogin"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="@string/login"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:background="?attr/buttonBackground"
+            app:backgroundTint="@null"
+            android:textColor="?attr/buttonTextColor"
+            android:layout_marginBottom="24dp" />
+
+        <TextView
+            android:id="@+id/tvSignup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/no_account"
+            android:textSize="14sp"
+            android:textColor="?attr/textColorPrimary"
+            android:layout_gravity="center" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:elevation="10dp"
+            android:layout_gravity="center_horizontal" />
+
+    </LinearLayout>
+
+</RelativeLayout>
