--- a/app/src/main/res/layout/item_language.xml
+++ b/app/src/main/res/layout/item_language.xml
@@ -1,29 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:orientation="horizontal"
-    android:gravity="center_vertical"
-    android:background="@drawable/bg_card"
+    android:background="?attr/cardBackgroundColor"
     android:paddingHorizontal="16dp"
     android:layout_marginBottom="12dp">
 
-    <!-- FLAG -->
     <ImageView
         android:id="@+id/imgFlag"
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:src="@drawable/ic_flag_vn"
-        android:contentDescription="Language Flag" />
+        android:layout_centerVertical="true"
+        android:scaleType="centerInside" 
+        android:contentDescription="@string/language" />
 
-    <!-- LANGUAGE NAME -->
     <TextView
         android:id="@+id/tvLanguageName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/imgFlag"
+        android:layout_centerVertical="true"
         android:text="Vietnamese"
-        android:textColor="#FFFFFF"
+        android:textColor="?attr/textColorPrimary"
         android:textSize="16sp"
         android:layout_marginStart="16dp" />
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/ivCheckmark"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:src="@drawable/ic_check"
+        app:tint="?attr/colorPrimary"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:visibility="gone" />
+
+</RelativeLayout>
