--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -5,30 +5,30 @@
     <item
         android:id="@+id/nav_home"
         android:icon="@drawable/ic_transaction"
-        android:title="Số giao dịch" />
+        android:title="@string/nav_home" />
 
     <!-- Ví tiền -->
     <item
         android:id="@+id/nav_wallet"
         android:icon="@drawable/ic_wallet_selected"
-        android:title="Ví tiền" />
+        android:title="@string/nav_wallet" />
 
     <!-- Nút thêm -->
     <item
         android:id="@+id/nav_add"
         android:icon="@drawable/ic_add"
-        android:title="Thêm" />
+        android:title="@string/nav_add" />
 
     <!-- Thống kê -->
     <item
         android:id="@+id/nav_statistic"
         android:icon="@drawable/ic_chart"
-        android:title="Thống kê" />
+        android:title="@string/nav_statistic" />
 
     <!-- Cài đặt -->
     <item
         android:id="@+id/nav_settings"
         android:icon="@drawable/ic_setting"
-        android:title="Cài đặt" />
+        android:title="@string/nav_settings" />
 
 </menu>
