--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,10 +13,27 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="bottomNavigationStyle">@style/Widget.FinMate.BottomNavigationView</item>
+
+        <!-- Định nghĩa các thuộc tính màu sắc theo theme -->
+        <item name="backgroundColor">#F5F5F5</item>
+        <item name="surfaceColor">#FFFFFF</item>
+        <item name="cardBackgroundColor">#FFFFFF</item>
+        <item name="bottomNavBackgroundColor">#FFFFFF</item>
+        <item name="textColorPrimary">@color/black</item>
+        <item name="textColorSecondary">#888888</item>
+        <item name="textColorPositive">#4CAF50</item>
+        <item name="textColorNegative">#F44336</item>
+        <item name="editTextBackground">@drawable/edittext_bg</item>
+        <item name="editTextColor">@color/black</item>
+        <item name="editTextColorHint">#888888</item>
+        <item name="buttonBackground">@drawable/login_button_bg</item>
+        <item name="buttonTextColor">@color/white</item>
+        <item name="iconTint">@color/black</item>
+        <item name="progressBarBackgroundColor">#E0E0E0</item>
     </style>
 
     <style name="Widget.FinMate.BottomNavigationView" parent="Widget.MaterialComponents.BottomNavigationView">
-        <item name="android:background">@drawable/bg_bottom_nav</item>
+        <item name="android:background">?attr/bottomNavBackgroundColor</item>
         <item name="itemIconTint">@color/selector_nav_color</item>
         <item name="itemTextColor">@color/selector_nav_color</item>
         <item name="menu">@menu/menu_bottom</item>
