--- a/app/src/main/res/layout/activity_category_expense.xml
+++ b/app/src/main/res/layout/activity_category_expense.xml
@@ -83,19 +83,21 @@
     </LinearLayout>
 
     <!-- ================= RECYCLER VIEW ================= -->
+
+    <!-- ================= ADD NEW CATEGORY BUTTON ================= -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvCategories"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_below="@id/tabContainer"
         android:layout_above="@+id/layoutAddNew"
-        android:layout_marginTop="12dp"
-        android:paddingHorizontal="16dp"
+        android:layout_below="@id/tabContainer"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="-2dp"
         android:clipToPadding="false"
-        tools:listitem="@layout/item_category_grid"
-        tools:itemCount="12" />
+        android:paddingHorizontal="16dp"
+        tools:itemCount="12"
+        tools:listitem="@layout/item_category_grid" />
 
-    <!-- ================= ADD NEW CATEGORY BUTTON ================= -->
     <LinearLayout
         android:id="@+id/layoutAddNew"
         android:layout_width="match_parent"
