--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -24,8 +24,8 @@
             android:layout_marginEnd="12dp"
             android:background="@drawable/bg_circle"
             android:padding="5dp"
-            android:src="@drawable/ic_avatar"
-            app:tint="?attr/colorOnPrimary"/>
+            android:src="@drawable/taikhoan"
+            app:tint="@null"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -90,7 +90,11 @@
         android:id="@+id/bottomNavigation"
         android:layout_width="match_parent"
         android:layout_height="65dp"
+        android:layout_alignParentBottom="true"
         app:menu="@menu/menu_bottom"
+        app:itemIconTint="@null"
+        app:itemTextColor="@color/bottom_navigation_color"
+        app:itemRippleColor="@android:color/transparent"
         android:background="?attr/bottomNavBackgroundColor"/>
 
 </LinearLayout>
