--- a/app/src/main/res/layout/item_category_list.xml
+++ b/app/src/main/res/layout/item_category_list.xml
@@ -13,14 +13,15 @@
         android:id="@+id/imgIcon"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:src="@drawable/ic_food"
-        app:tint="?attr/iconTint" />
+        android:src="@drawable/chedoan"
+        app:tint="@null" />
 
     <TextView
         android:id="@+id/txtName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/expense"
+
         android:textColor="?attr/textColorPrimary"
         android:textSize="16sp"
         android:layout_marginStart="14dp" />
